ChangeLog for ARQ
=================

==== ARQ 2.8.3

+ Bug fix: some multiplely nested OPTIONALs could result in only naive, unoptimized execution. 

==== ARQ 2.8.2

+ SPARQL v1.1 as an defined language and parser, separate from ARQ 
+ Results output in CSV
+ Optimization of disjunction FILTERs 
    with care to get same effects if value-based
    URIs are always safe to optimize. 
+ Bug fix in filter placement (in code used by TDB only) 
+ Bug fix in filter equality transformation if involving unused an variable.

==== ARQ 2.8.1

+ Bug fixes
   + substitution in NOT EXISTS
   + substitution in assignment
   + constant folding and logical special forms
   + bad lock allocation (only occurs under very high load)

+ Speed up processing of nested optionals.  Greatly speeds up BSBM with TDB.

+ Some JMX management exposed: Object names start "com.hp.hpl.jena.sparql". 
  Details include: system and version information, query execution count, 
    last query and the time execution started.

==== ARQ 2.8.0

+ Build is now done by maven
** JAR changes: the ARQ jars are now called "arq.jar" and "arq-tests.jar".
   Only "arq.jar is needed at runtime unless running ARQ test code. 
** There is only one maven artifact "arq".  "arq-extra" is no more.
  See README for deatils of files produced.

+ Negation-as-failure: NOT EXISTS {pattern}
  see http://jena.sf.net/ARQ/negation.html for details.

+ Bug fix: Reverse paths of length 3 or more were not being parsed correctly.

+ Upgrade to stax 1.0.1 and wstx-asl-3.2.9

+ Remove json.jar (jena compiled code from org.json).  Replace with source code, renamed, in ARQ itself. 
  package com.hp.hpl.jena.sparql.lib.org.json;
  Cleaned up for Java generics.

==== ARQ 2.7.0

+ New build system.

+ Clearing up.
    junit used is now v4.5
    internal logging API is SLF4J (Jena uses SLF4J as of v 2.6.0 as well)
    Jars needed:  slf4j-api-1.5.6.jar and (for log4j) slf4j-log4j12-1.5.6.jar
    